--- a/style.css
+++ b/style.css
@@ -1,9 +1,32 @@
 body {
   margin: 0;
   padding: 0;
+  color: white;
+  overflow-x: hidden;
 }
 
 .mycanvas {
-  vertical-align: bottom;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -100;
+}
+
+main {
+  position: absolute;
+  width: 100vw;
+  height: 200vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  font-size: 4rem;
+  margin-top: 70px;
+}
+
+section {
+  min-height: 100vh;
+  padding: 20px;
+  font-size: 3.5rem;
 }
 /*# sourceMappingURL=style.css.map */
